[tool.poetry]
name = "dask_tryout"
version = "0.1.0"
description = ""
authors = ["Simon Kallfass <skallfass@ouroboros.info>"]

[tool.poetry.dependencies]
python = "^3.8"
dask = { version = "==2.30.0", extras = ["bag", "delayed", "distributed"] }
distributed = "==2.30.0"
bokeh = ">=2.2.3"
mimesis = "*"
ujson = ">=4.0.1"
tornado = "<6.1"
graphviz = "*"
faker = ">=4.14.0"
pytz = "*"
jupyter-server-proxy = ">=1.5.0"
ipywidgets = ">=7.5.1"
dask-labextension = ">=3.0.0"
jupyterlab = ">=2.2.9"
pandas = ">=1.1.4"
pandas-bokeh = ">=0.5"

[tool.poetry.dev-dependencies]
autoflake = ">=1.3"
black = "20.8b1"
coverage-badge = ">=1"
flake8 = ">=3.7"
ipython = ">=7.8"
isort = ">=5.6"
jedi = ">=0.14"
neovim = ">=0.3.1"
pudb = ">=2019.1"
pygments = ">=2.4"
pylint = ">=2.4.3"
pytest = ">=5"
pytest-cov = ">=2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
